--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "graphql": "^16.6.0",
+    "js-cookie": "^3.0.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "urql": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
