--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.69",
-    "@mui/material": "^5.11.11",
+    "@mui/material": "^5.11.12",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -22,11 +24,12 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.58.3",
     "typescript": "4.9.5",
-    "urql": "^3.0.3"
+    "urql": "^3.0.3",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "sass": "^1.58.3"
   }
 }
