--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
@@ -20,16 +21,22 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.1",
     "next": "13.2.3",
+    "next-urql": "^4.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5",
+    "react-is": "^18.2.0",
     "urql": "^3.0.3",
     "use-debounce": "^9.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "3.2.2",
+    "@graphql-codegen/client-preset": "2.1.1",
     "@types/js-cookie": "^3.0.3",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "typescript": "^4.9.5",
+    "@graphql-codegen/introspection": "3.0.1"
   }
 }
