--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "^3.0.1",
     "next": "13.2.3",
     "next-urql": "^4.0.3",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
@@ -34,9 +35,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.2",
     "@graphql-codegen/client-preset": "2.1.1",
+    "@graphql-codegen/introspection": "3.0.1",
     "@types/js-cookie": "^3.0.3",
     "sass": "^1.58.3",
-    "typescript": "^4.9.5",
-    "@graphql-codegen/introspection": "3.0.1"
+    "typescript": "^4.9.5"
   }
 }
